Fixed spacing on top of cards

--- a/style.css
+++ b/style.css
@@ -167,7 +167,7 @@ body{
 
 .card {
 	position: absolute;
-	top: 100px;
+	top: 20px;
 	left: 5px;
 	margin-left: 160px;
 }
@@ -204,4 +204,8 @@ body{
 }
 .card2 img:hover {
 	background-color: rgba(0,0,0,0.5);
+}
+.col {
+	position: relative;
+	top: 10px;
 }
